--- a/Lesson_2.html
+++ b/Lesson_2.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
-<html> </html>
-<head> </head>
-<title>Lesson 2</title>
-<body> </body>
-<!-- comment -->
+<html lang="en-US"> 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Lesson 2</title>
+</head>
 
-<h1>Lesson Outcome</h1>
+<body> 
+    <h1>Lesson Outcome</h1>
 
-<h2>The Basics</h2>
-<ol>
-    <li>Setting up our dev environment</li>
-    <li>How the internet works</li>
-    <li>What is GIT and GitHub</li>
-    <li>MDN</li>
-</ol>
-
-<h2>HTML</h2>
-<ul>
-    <li>HTML stands for <b> Hyper Text Markup Language</b></li>
-    <li>Basic Tags:</li>
+    <h2>The Basics</h2>
     <ol>
-        <li>Doctype</li>
-        <li>HTML</li>
-        <li>Head</li>
+        <li>Setting up our dev environment</li>
+        <li>How the internet works</li>
+        <li>What is GIT and GitHub</li>
+        <li>MDN</li>
     </ol>
-    <li><i>Lists</i></li>
-</ul>
+
+    <h2>HTML</h2>
+    <ul>
+        <li>HTML stands for <strong> Hyper Text Markup Language</strong></li>
+        <li>
+            Basic Tags:
+            <ol>
+                <li>Doctype</li>
+                <li>HTML</li>
+                <li>Head</li>
+            </ol>
+        </li>
+        <li><em>Lists</em></li>
+    </ul>
+</body>
+</html>
