--- a/Experiment_2.html
+++ b/Experiment_2.html
@@ -11,7 +11,7 @@
 
     <h2>Images</h2>
     <a href="https://www.instagram.com/p/Cnnxq2GKG2S/">
-        <img src="Bunny.png" alt="Bunny Image Source" width="400" height="400"/>
+        <img src="Bunny.png" alt="Bunny Image Source" width="400" height="400">
     </a>
 
     <h2>Links</h2>
