--- a/experiment_2.html
+++ b/experiment_2.html
@@ -16,8 +16,7 @@
 
     <h2>Links</h2>
     <p>Follow me on 
-        <a href="https://www.instagram.com/playingbunnies?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Bunny Instagram
-    </a> 
+        <a href="https://www.instagram.com/playingbunnies?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Bunny Instagram</a> 
     </p>
    
 </body>
