--- a/login.html
+++ b/login.html
@@ -3,32 +3,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Lesson 2</title>
+    <title>Login</title>
 </head>
 
 <body> 
-    <h1>Lesson Outcome</h1>
+    <h1>Login</h1>
 
-    <h2>The Basics</h2>
-    <ol>
-        <li>Setting up our dev environment</li>
-        <li>How the internet works</li>
-        <li>What is GIT and GitHub</li>
-        <li>MDN</li>
-    </ol>
+    <h2>Sign In</h2>
 
-    <h2>HTML</h2>
-    <ul>
-        <li>HTML stands for <strong> Hyper Text Markup Language</strong></li>
-        <li>
-            Basic Tags:
-            <ol>
-                <li>Doctype</li>
-                <li>HTML</li>
-                <li>Head</li>
-            </ol>
-        </li>
-        <li><em>Lists</em></li>
-    </ul>
+    <form action="https://www.google.com" method="GET">
+        <label for="email">Email:</label>
+        <input id="email" name="email" type="email" required>
+        <label for="password">Password:</label>
+        <input id="password" name="password" type="password" minlength="8" maxlength="16" required>
+      <input type="submit" value="Submit">
+       </form>
+
+       <p>No Account? Create an account by registering <a href="register.html">here</a></p>
 </body>
 </html>
