open on new tab

--- a/experiment_2.html
+++ b/experiment_2.html
@@ -10,13 +10,13 @@
     <h1>Experiment 2 - Images and Links</h1>
 
     <h2>Images</h2>
-    <a href="https://www.instagram.com/p/Cnnxq2GKG2S/">
+    <a href="https://www.instagram.com/p/Cnnxq2GKG2S/" target="_blank">
         <img src="Bunny.png" alt="Bunny Image Source" width="400" height="400">
     </a>
 
     <h2>Links</h2>
     <p>Follow me on 
-        <a href="https://www.instagram.com/playingbunnies?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Bunny Instagram</a> 
+        <a href="https://www.instagram.com/playingbunnies?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">Bunny Instagram</a> 
     </p>
    
 </body>
