--- a/navbar.html
+++ b/navbar.html
@@ -8,134 +8,33 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Nav Bar</title>
-
-    <nav class="navbar navbar-expand-md sticky-top navbar-dark bg-dark">
+    <title>Navigation Bar</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </div>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
-  </head>
-
-  <body>
-    <div class="container">
-        <br> 
-    <p>
-        Lorem ipsum odor amet, consectetuer adipiscing elit. Integer 
-        ullamcorper integer nisl aenean magna sagittis. Ipsum tortor 
-        ultrices montes commodo arcu sagittis leo. Lobortis cursus 
-        convallis litora rhoncus nostra adipiscing. Placerat lobortis 
-        vestibulum neque mi placerat nisi. Iaculis taciti ad erat torquent 
-        orci. Adipiscing non sit ac nunc mi dis rhoncus tristique. Leo 
-        molestie torquent quis, class id sodales morbi. Apenatibus platea 
-        rhoncus tempus nostra; ante ut tincidunt. Nec ligula senectus sem 
-        sociosqu curae sem quam tellus?
-    </p>
-
-    <p>
-        Hac primis orci libero integer ultricies luctus penatibus fusce. 
-        Interdum ligula mollis dignissim dolor odio mattis nunc sit. 
-        Vulputate nisl metus, venenatis odio penatibus suscipit litora 
-        integer tortor. Aenean inceptos cubilia aliquet pretium molestie 
-        diam euismod. Conubia per vestibulum aptent nec ullamcorper sem ex 
-        nisi nec. Eu mattis mauris ut purus rhoncus tempus a sociosqu? Montes 
-        dictumst nunc morbi rhoncus suscipit auctor. Integer scelerisque 
-        commodo tempus consequat euismod aliquet. Sodales ullamcorper maecenas 
-        dapibus natoque orci posuere. Lectus finibus metus praesent etiam nibh 
-        tortor nunc?
-    </p>
-
-    <p>
-        Fringilla tristique est ullamcorper praesent taciti massa lacinia. 
-        Lacus felis egestas penatibus, hac maecenas hac. Magnis ante nostra 
-        eros non et nibh vel orci. Pulvinar dignissim laoreet amet suscipit 
-        hendrerit nascetur senectus sit. Elementum facilisis inceptos a purus 
-        scelerisque magna. Velit rutrum per adipiscing parturient at natoque 
-        scelerisque. Himenaeos in facilisi suspendisse primis eget eget. 
-        Vehicula proin dictum venenatis iaculis eu fringilla aliquet fusce 
-        finibus. Tempus quam ultrices laoreet id aliquet. Molestie torquent 
-        purus elit, inceptos dictum eu libero.
-    </p>
-
-    <p>
-        Sollicitudin neque laoreet suspendisse ut ipsum odio quisque cursus 
-        nascetur. Urna vitae efficitur sociosqu inceptos auctor elit mauris 
-        quis. Nulla finibus dignissim est turpis convallis. Montes mattis per 
-        morbi pharetra maecenas sodales orci. Neque habitasse aliquam risus 
-        commodo primis sagittis ultrices. Enim adipiscing risus ultricies aliquet 
-        velit neque. Nascetur justo sollicitudin netus vehicula natoque porttitor 
-        eget bibendum curae.
-    </p>
-        
-    <p>
-        Lacinia ex varius magna molestie dis metus scelerisque accumsan. Vivamus 
-        interdum elementum ad per; nam hac cursus. Cursus natoque suspendisse 
-        duis viverra purus elementum. Accumsan elit semper vitae odio nec semper 
-        nascetur erat. Vehicula luctus volutpat efficitur senectus inceptos netus duis torquent. 
-        Non eget varius rutrum varius dignissim augue vestibulum odio. Quam 
-        parturient bibendum venenatis himenaeos tristique eu id. Malesuada dolor 
-        nostra metus suspendisse eget curabitur porttitor.
-    </p>
-        
-    <p>
-        Pellentesque elementum varius turpis; nascetur ullamcorper pulvinar. Ante eros 
-        integer non habitasse venenatis facilisi? Efficitur rhoncus odio sociosqu, ut 
-        at quam tempus. Sit congue tincidunt interdum facilisis, phasellus potenti 
-        varius malesuada. Ex ligula sollicitudin duis rhoncus, adipiscing urna sem 
-        arcu. Risus inceptos auctor lectus gravida diam maecenas class. Mus 
-        pretium mollis urna; nascetur turpis natoque neque. Turpis euismod 
-        penatibus nunc finibus sollicitudin ultrices interdum. Non posuere 
-        varius tristique consequat eu fringilla primis. Tempor nam enim volutpat 
-        ut; ullamcorper amet quam.
-    </p>
-
-    <p>
-        Aimperdiet euismod quisque euismod nostra vivamus libero ac. Platea 
-        elementum ornare lacinia blandit in libero ullamcorper porttitor. 
-        Dapibus auctor turpis inceptos nascetur habitant platea ad. Curae 
-        eget suscipit, montes erat tincidunt mauris. Quisque hac scelerisque 
-        maecenas elementum vulputate sem montes mauris? Luctus vestibulum 
-        integer, imperdiet sapien justo dignissim. Dignissim porttitor 
-        efficitur a nec integer torquent tincidunt. Amagna id laoreet 
-        imperdiet eget proin aptent aptent interdum. Arcu augue varius 
-        interdum phasellus sodales inceptos.
-    </p>
-
-    <p>
-        Aimperdiet euismod quisque euismod nostra vivamus libero ac. Platea 
-        elementum ornare lacinia blandit in libero ullamcorper porttitor. 
-        Dapibus auctor turpis inceptos nascetur habitant platea ad. Curae 
-        eget suscipit, montes erat tincidunt mauris. Quisque hac scelerisque 
-        maecenas elementum vulputate sem montes mauris? Luctus vestibulum 
-        integer, imperdiet sapien justo dignissim. Dignissim porttitor 
-        efficitur a nec integer torquent tincidunt. Amagna id laoreet 
-        imperdiet eget proin aptent aptent interdum. Arcu augue varius 
-        interdum phasellus sodales inceptos.
-    </p>
-
-    <p>
-        Aimperdiet euismod quisque euismod nostra vivamus libero ac. Platea 
-        elementum ornare lacinia blandit in libero ullamcorper porttitor. 
-        Dapibus auctor turpis inceptos nascetur habitant platea ad. Curae 
-        eget suscipit, montes erat tincidunt mauris. Quisque hac scelerisque 
-        maecenas elementum vulputate sem montes mauris? Luctus vestibulum 
-        integer, imperdiet sapien justo dignissim. Dignissim porttitor 
-        efficitur a nec integer torquent tincidunt. Amagna id laoreet 
-        imperdiet eget proin aptent aptent interdum. Arcu augue varius 
-        interdum phasellus sodales inceptos.
-    </p>
-</div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
