--- a/navbarflex.html
+++ b/navbarflex.html
@@ -1,9 +1,7 @@
 <html lang="en"><head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-CuOF+2SnTUfTwSZjCXf01h7uYhfOBuxIhGKPbfEJ3+FqH/s6cIFN9bGr1HmAg4fQ" crossorigin="anonymous">
     <title>Nav Flexbox</title>
 
@@ -26,8 +24,6 @@
 <body data-new-gr-c-s-check-loaded="14.1209.0" data-gr-ext-installed="">
     <h1>Nav Flexbox</h1>
     <h2>Navbar Style 1</h2>
-    <!-- navs are built with flexbox, this means we can change them using what we just learned about FlexBox-->
-    <!-- by default the nabvar is set to display flex, because it works with flexbox out of the box, let's inspect it to see this -->
     <nav class="nav">
         <a class="nav-link active" href="#">Active</a>
         <a class="nav-link" href="#">Link</a>
@@ -35,7 +31,6 @@
         <a class="nav-link disabled" href="#">Disabled</a>
     </nav>
     <h2>Navbar Style 2</h2>
-    <!-- note you do not have to set it to display flex since that's done out of the box -->
     <nav class="nav border justify-content-around">
         <a class="nav-link active" href="#">Active</a>
         <a class="nav-link" href="#">Link</a>
@@ -57,9 +52,6 @@
         <a class="nav-link disabled" href="#">Disabled</a>
     </nav>
     <h2>Responsive Navbar</h2>
-    <!-- responsive navbar -->
-    <!-- justify content-center is used for alignment on the main axis, then we need to use align-items-center on the cross axis -->
-    <!-- explained here - https://v5.getbootstrap.com/docs/5.0/utilities/flex/ -->
     <nav class="nav flex-column flex-sm-row justify-content-center align-items-center">
         <a class="nav-link active" href="#">Active</a>
         <a class="nav-link" href="#">Link</a>
@@ -88,4 +80,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-popRpmFF9JQgExhfw5tZT4I9/CI5e2QcuUZPOVXb1m7qUmeR2b50u+YFEYe1wgzy" crossorigin="anonymous"></script>
 
 
-</body><grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration></html>
+</body>
+
+</html>
