--- a/navbarflex.html
+++ b/navbarflex.html
@@ -1,27 +1,25 @@
-<html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-CuOF+2SnTUfTwSZjCXf01h7uYhfOBuxIhGKPbfEJ3+FqH/s6cIFN9bGr1HmAg4fQ" crossorigin="anonymous">
     <title>Nav Flexbox</title>
-
+</head>
+<body data-new-gr-c-s-check-loaded="14.1209.0" data-gr-ext-installed="">
     <div class="container position-relative">
         <div class="resizable-component position-absolute">
-          <div class="resizable-r" style="width: 6px;"></div>
-          <div class="resizable-rb" style="width: 12px; height: 12px;"></div>
-          <div class="resizable-b" style="height: 12px;"></div>
-          <div class="resizable-lb" style="width: 12px; height: 12px;"></div>
-          <div class="resizable-l" style="width: 12px;"></div>
-          <div class="resizable-lt" style="height: 12px; width: 12px;"></div>
-          <div class="resizable-t" style="height: 12px;"></div>
-          <div class="resizable-rt" style="width: 12px; height: 12px;"></div>
+            <div class="resizable-r" style="width: 6px;"></div>
+            <div class="resizable-rb" style="width: 12px; height: 12px;"></div>
+            <div class="resizable-b" style="height: 12px;"></div>
+            <div class="resizable-lb" style="width: 12px; height: 12px;"></div>
+            <div class="resizable-l" style="width: 12px;"></div>
+            <div class="resizable-lt" style="height: 12px; width: 12px;"></div>
+            <div class="resizable-t" style="height: 12px;"></div>
+            <div class="resizable-rt" style="width: 12px; height: 12px;"></div>
         </div>
-          </main>
-        </div>
-      </div>      
+    </div>      
 
-
-<body data-new-gr-c-s-check-loaded="14.1209.0" data-gr-ext-installed="">
     <h1>Nav Flexbox</h1>
     <h2>Navbar Style 1</h2>
     <nav class="nav">
@@ -74,12 +72,6 @@
         <a class="nav-link disabled" href="#">Disabled</a>
     </nav>
 
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-popRpmFF9JQgExhfw5tZT4I9/CI5e2QcuUZPOVXb1m7qUmeR2b50u+YFEYe1wgzy" crossorigin="anonymous"></script>
-
-
 </body>
-
 </html>
